--- a/src/Worker/Templates/Email/VerificationLink.html
+++ b/src/Worker/Templates/Email/VerificationLink.html
@@ -29,12 +29,12 @@
 </head>
 <body>
     <div class="header">
-        <h2>Password Reset</h2>
+        <h2>Account Verification</h2>
     </div>
     <div class="content">
         <p>Hello {{Username}},</p>
-        <p>Change your password by clicking below:</p>
-        <a href="{{PasswordResetLink}}" class="button">Verify Account</a>
+        <p>Please verify your account by clicking below:</p>
+        <a href="{{VerificationLink}}" class="button">Verify Account</a>
     </div>
 </body>
 </html>
