--- a/src/Worker/Templates/Email/MfaCode.html
+++ b/src/Worker/Templates/Email/MfaCode.html
@@ -29,12 +29,12 @@
 </head>
 <body>
     <div class="header">
-        <h2>Password Reset</h2>
+        <h2>MFA code</h2>
     </div>
     <div class="content">
         <p>Hello {{Username}},</p>
-        <p>Change your password by clicking below:</p>
-        <a href="{{PasswordResetLink}}" class="button">Verify Account</a>
+        <p>This is your MFA one time code:</p>
+        <p style="width: 120px; color: #0078D4; font-weight: 700">{{MfaCode}}</p>
     </div>
 </body>
 </html>
