--- a/src/Worker/Templates/Email/PasswordReset.html
+++ b/src/Worker/Templates/Email/PasswordReset.html
@@ -34,7 +34,7 @@
     <div class="content">
         <p>Hello {{Username}},</p>
         <p>Change your password by clicking below:</p>
-        <a href="{{PasswordResetLink}}" class="button">Verify Account</a>
+        <a href="{{PasswordResetLink}}" class="button">Click to Reset</a>
     </div>
 </body>
 </html>
